<?xml version="1.0"?>
<package>
  <name>cv_slam</name>
  <version>0.0.0</version>
  <description>cv_slam package</description>

  <maintainer email="yhzhao_hit@163.com">yh Zhao</maintainer>
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>

  <!-- <author email="yhzhao_hit@163.com">Kint Zhao</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nav_msgs</build_depend>
   <build_depend>libg2o</build_depend>
   <run_depend>libg2o</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <export>

  </export>
</package>
